--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AKFLIX</title>
-  <link rel="icon" href="favicon.svg" type="image/svg+xml" />
+  <!-- Custom favicon (extra large red capital A) -->
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 80 100'><text x='50%' y='75' dominant-baseline='middle' text-anchor='middle' font-size='100' font-family='Arial' font-weight='900' fill='%23E50914'>A</text></svg>" type="image/svg+xml" />
+  <!-- Also provide a PNG version for browsers that don't support SVG favicons as well -->
+  <link rel="shortcut icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 80 100'><text x='50%' y='75' dominant-baseline='middle' text-anchor='middle' font-size='100' font-family='Arial' font-weight='900' fill='%23E50914'>A</text></svg>" type="image/x-icon" />
   <meta name="description" content="AKFLIX - A Netflix clone streaming platform" />
   <link rel="apple-touch-icon" href="logo192.svg" />
   <link rel="manifest" href="manifest.json" />
@@ -14,7 +17,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #141414;
+      background-color: #000000;
       color: white;
       font-family: 'Roboto', sans-serif;
     }
