--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AKFLIX</title>
-  <!-- Custom favicon (extra large red capital A) -->
+  <!-- Custom favicon (red capital A) -->
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 80 100'><text x='50%' y='75' dominant-baseline='middle' text-anchor='middle' font-size='100' font-family='Arial' font-weight='900' fill='%23E50914'>A</text></svg>" type="image/svg+xml" />
-  <!-- Also provide a PNG version for browsers that don't support SVG favicons as well -->
-  <link rel="shortcut icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 80 100'><text x='50%' y='75' dominant-baseline='middle' text-anchor='middle' font-size='100' font-family='Arial' font-weight='900' fill='%23E50914'>A</text></svg>" type="image/x-icon" />
-  <meta name="description" content="AKFLIX - A Netflix clone streaming platform" />
-  <link rel="apple-touch-icon" href="logo192.svg" />
+  <!-- Shortcut icon with the same red A -->
+  <link rel="shortcut icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 80 100'><text x='50%' y='75' dominant-baseline='middle' text-anchor='middle' font-size='100' font-family='Arial' font-weight='900' fill='%23E50914'>A</text></svg>" type="image/svg+xml" />
+  <meta name="description" content="AKFLIX - streaming platform" />
+  <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 80 100'><text x='50%' y='75' dominant-baseline='middle' text-anchor='middle' font-size='100' font-family='Arial' font-weight='900' fill='%23E50914'>A</text></svg>" />
   <link rel="manifest" href="manifest.json" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
