--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,8 +6,8 @@
   <title>AKFLIX</title>
   <!-- Custom favicon (red capital A) -->
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 80 100'><text x='50%' y='75' dominant-baseline='middle' text-anchor='middle' font-size='100' font-family='Arial' font-weight='900' fill='%23E50914'>A</text></svg>" type="image/svg+xml" />
-  <!-- Shortcut icon with the same red A -->
-  <link rel="shortcut icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 80 100'><text x='50%' y='75' dominant-baseline='middle' text-anchor='middle' font-size='100' font-family='Arial' font-weight='900' fill='%23E50914'>A</text></svg>" type="image/svg+xml" />
+  <!-- Smaller shortcut icon with the same red A -->
+  <link rel="shortcut icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 40 50'><text x='50%' y='38' dominant-baseline='middle' text-anchor='middle' font-size='50' font-family='Arial' font-weight='900' fill='%23E50914'>A</text></svg>" type="image/svg+xml" />
   <meta name="description" content="AKFLIX - streaming platform" />
   <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 80 100'><text x='50%' y='75' dominant-baseline='middle' text-anchor='middle' font-size='100' font-family='Arial' font-weight='900' fill='%23E50914'>A</text></svg>" />
   <link rel="manifest" href="manifest.json" />
